images can be uploaded and served

--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -100,31 +100,17 @@
     </div>
 
 
-    <div class="col-md-4" ng-controller="imageController">
-      <form>
-        <!-- <input type="text" name="firstName" ng-model="$parent.tempChildObj.firstName" placeholder=""> -->
-                <input name="file" type="file" accept="image/*" ng-file-select="onFileSelect($files)" >
-                <div ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class"
-                      ng-show="dropSupported">drop files here</div>
-<!--                 <div ng-file-drop-available="dropSupported=true" 
-                      ng-show="!dropSupported">HTML5 Drop File is not supported!</div> -->
-                <button ng-click="upload.abort()">Cancel Upload</button>
-      </form>
-    </div>
-
-
-
-
     <br/>
     <br/>
   <!-- end of .row -->
   </div>
 
     <!-- buttons -->
-    <div class="center">
+    <div class="center" ng-controller="imageController">
+      <input name="file" type="file" accept="image/*" ng-file-select="onFileSelect($files)">
       <input
       class="btn btn-success"
-      ng-click="create()" 
+      ng-click="createChildThenUpload()" 
       type="button" 
       name="submit" 
       value="Submit"/>
