--- a/client/templates/public/pledge.html
+++ b/client/templates/public/pledge.html
@@ -75,7 +75,7 @@
       placeholder="Zip Code"/>
     </div>
 
-    <div class="checkbox">
+<!--     <div class="checkbox">
       <label>I would like my donation to go to the following program(s):</label>
       <br/>
       <label>
@@ -93,7 +93,7 @@
         Please make checks payable to <strong>Children's Fund</strong> located at <strong>Children's Fund, 472 Harbor Blvd. Bldg C, Belmont, CA 94002</strong>
         </p>
       </label>
-    </div>
+    </div> -->
 
     <div class="radio">
       <label>
