fullstack implementation of image upload

--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -10,7 +10,7 @@
 
 
   -->
-    <img src="http://cdn.mhpbooks.com/uploads/2013/10/Success-Kid.jpg" alt="some kid">
+    <img ng-src="http://localhost:4568/images/{{ child.image }}" alt="{{ child.firstName }}">
     <!-- child's name -->
     <div>
       {{ child.firstName }}
