--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -9,6 +9,11 @@
 
     <div>
       <table class="table table-condensed table-striped">
+        <div>
+          this isn't aligned!
+          <br/>
+          <img ng-src="http://localhost:4568/images/{{ child.image }}" alt="{{ child.firstName }}">
+        </div>
         <thead>
           <tr>
             <th>Field</th>
