--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -1,4 +1,11 @@
 <h1>List of Workers ({{numWorkers}})</h1>
+
+<ul class="pagination" ng-show="pages && pages.length > 1">
+  <li ng-class="page === 1 ? 'disabled' : ''"><a href="#" ng-click="(page - 1) > 0 && fetchAllWorkers(page - 1)">&laquo;</a></li>
+  <li ng-repeat="pageNumber in pages" ng-click="fetchAllWorkers(pageNumber)" ng-class="page === pageNumber ? 'active': ''"><a href="#">{{pageNumber}}</a></li>
+  <li ng-class="page === pages.length ? 'disabled' : ''"><a href="#" ng-click="(page + 1) <= pages.length && fetchAllWorkers(page + 1)">&raquo;</a></li>
+</ul>
+
 <div class="panel-group" id="accordion">
   <div class="panel panel-default" ng-repeat="worker in workers">
     <div class="panel-heading">
