--- a/client/templates/helpDesk/account/users.html
+++ b/client/templates/helpDesk/account/users.html
@@ -1,5 +1,11 @@
 <h1>User Data</h1>
 
+<ul class="pagination" ng-show="pages && pages.length > 1">
+  <li ng-class="page === 1 ? 'disabled' : ''"><a href="#" ng-click="(page - 1) > 0 && fetchUsers(page - 1)">&laquo;</a></li>
+  <li ng-repeat="pageNumber in pages" ng-click="fetchUsers(pageNumber)" ng-class="page === pageNumber ? 'active': ''"><a href="#">{{pageNumber}}</a></li>
+  <li ng-class="page === pages.length ? 'disabled' : ''"><a href="#" ng-click="(page + 1) <= pages.length && fetchUsers(page + 1)">&raquo;</a></li>
+</ul>
+
 <table class="table table-striped">
   <tr><th>User ID</th><th>Email</th><th>Privileges</th></tr>
   <tr ng-repeat="user in users"><td>{{ user.id }}</td><td>{{ user.email }}</td>
