added validation on plege and create child; added workaround if no image uplaoded during child creation; added redirect ro child creation

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -39,3 +39,11 @@ body {
 .redBorder {
   border: 1px solid red;
 }
+
+
+input.ng-invalid {
+  border: 1px solid red;
+}
+input.ng-valid {
+  border: 1px solid green;
+}
