Add some styles and change button placement on worker swap

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -39,3 +39,12 @@ body {
 .redBorder {
   border: 1px solid red;
 }
+
+/* Admin Dashboard Styles */
+
+#admin-navbar{
+}
+
+#admin-navbar a{
+  color: black;
+}
