Add signout controller and implement signout for admin

--- a/client/templates/admin/account.html
+++ b/client/templates/admin/account.html
@@ -30,7 +30,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign Out</a></li>
+        <li><a ui-sref="admin.signout">Sign Out</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
