--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -16,7 +16,7 @@
     <div class="panel-heading">
       <h4 class="panel-title" ng-click="getChildren(worker)">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{worker.id}}">
-          {{worker.firstName}} {{worker.lastName}}
+          {{worker.firstName}} {{worker.lastName}} {{worker.email}}
         </a>
       </h4>
     </div>
@@ -52,13 +52,11 @@
             <input type="submit" class="btn btn-primary">
           </div>
           <table class="table">
-            <tr ng-repeat="worker in matchedWorkers" ng-click="setWorker(worker)" ng-class="swapWorker === worker ? 'active' : ''"><td>{{worker.firstName}} {{worker.lastName}}</td></tr>
+            <tr ng-repeat="worker in matchedWorkers" ng-click="setWorker(worker)" ng-class="swapWorker === worker ? 'active' : ''">
+              <td>{{worker.firstName}} {{worker.lastName}}</td>
+            </tr>
           </table>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="saveWorker()">Save changes</button>
       </div>
     </div>
   </div>
