angular css styles only apply to createChildTag.html and pledge.html

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -42,10 +42,10 @@ body {
 
 
 /* Input Verification Styles */
-input.ng-invalid {
+.createChildTag input.ng-invalid, .pledge input.ng-invalid {
   border: 1px solid red;
 }
-input.ng-valid {
+.createChildTag input.ng-valid, .pledge input.ng-valid {
   border: 1px solid green;
 
 /* Admin Dashboard Styles */
