--- a/client/templates/public/pledge.html
+++ b/client/templates/public/pledge.html
@@ -1,4 +1,4 @@
-<div>
+<div class="pledge">
   <h2>
     Donation submission for {{ currentChild.firstName }} from {{ currentChild.location }}
   </h2>
