--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -1,4 +1,4 @@
-<form name="donor_info" role="form" novalidate>
+<form name="donor_info" role="form" novalidate class="createChildTag">
   <div class="container-fluid">
     <div class="row">
       <!-- child data -->
