--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -29,7 +29,7 @@
             <td></td>
             <td>{{child.firstName}}</td>
             <td>{{child.lastName}}</td>
-            <td><button class="btn btn-primary" data-toggle="modal" data-target="#myModal" ng-click="setChildForModal(child)">Change Worker</button></td>
+            <td><button class="btn btn-primary" data-toggle="modal" data-target="#myModal" ng-click="setChildForModal(child, worker)">Change Worker</button></td>
           </tr>
         </table>
       </div>
@@ -40,10 +40,6 @@
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">{{modalChild.firstName}} {{modalChild.lastName}}</h4>
-      </div>
       <div class="modal-body">
         <h2>Change Worker for Child: {{modalChild.firstName}} {{modalChild.lastName}}</h2>
         <form role="form" class="form-inline" ng-submit="fetchWorker()">
@@ -51,12 +47,25 @@
             <input placeholder="Input worker last name" class="form-control" ng-model="workerQuery">
             <input type="submit" class="btn btn-primary">
           </div>
-          <table class="table">
-            <tr ng-repeat="worker in matchedWorkers" ng-click="setWorker(worker)" ng-class="swapWorker === worker ? 'active' : ''">
-              <td>{{worker.firstName}} {{worker.lastName}}</td>
-            </tr>
-          </table>
         </form>
+          <div ng-show="matchedWorkers">
+            <h3>Select New Worker Below</h3>
+            <table class="table">
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th></th>
+              </tr>
+              <tr ng-repeat="worker in matchedWorkers" ng-click="setWorker(worker)" ng-class="swapWorker === worker ? 'active' : ''">
+                <td>{{worker.firstName}}</td>
+                <td>{{worker.lastName}}</td>
+                <td>
+                  <button class="btn btn-primary" ng-show="swapWorker === worker && !success" ng-click="saveWorker()">Save Change</button>
+                  <button class="btn btn-success" ng-show="success" data-dismiss="modal">Worker Changed</button>
+                </td>
+              </tr>
+            </table>
+          </div>
       </div>
     </div>
   </div>
