price, phone, and date are completeley sanitized on client side;  created helper services

--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -78,7 +78,7 @@
 
           <tr>
             <td>Date of Birth</td>
-            <td editable-text="child.dob" onaftersave="update(child.id, 'dob', child.dob)">
+            <td editable-date="child.dob" onaftersave="update(child.id, 'dob', child.dob)">
               {{ child.dob || 'Enter a Value' }}
             </td>
             <td>Item 2 Price</td>
