Update some CSS and upload loading spinner

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -49,9 +49,10 @@ body {
   border: 1px solid green;
 
 /* Admin Dashboard Styles */
-#admin-navbar{
+#internal-navigation{
+
 }
 
-#admin-navbar a{
+#internal-navigation a{
   color: black;
 }
