--- a/client/templates/admin/account.html
+++ b/client/templates/admin/account.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top hsa-nav" id="admin-navbar" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" id="internal-navigation" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
