--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -3,6 +3,10 @@ margin-left: auto;
 margin-right: auto;
 display:block;
 ">
+  <div class="center">
+    <img class="logo" src="../../assets/images/hsf_logo.png" alt=""/>    
+  </div>
+
   <h1>Children</h1>
   <ul class="pagination" ng-show="pages && pages.length > 1">
     <li ng-class="page === 1 ? 'disabled' : ''"><a href="#" ng-click="(page - 1) > 0 && get(page - 1)">&laquo;</a></li>
@@ -46,7 +50,7 @@ display:block;
         <div ng-controller="pledgeController">
           <div
           style="
-          text-align: center;
+          center
           "
           >
             <input 
